# gendiff

./: .travis.yml  Makefile  README.md  coverage.xml  pyproject.toml
fixtures/: before.yaml  before_2.json  content.py  result.json
gendiff/: __init__.py  app.py  build.py  calculator.py  cli.py  constructor.py  diff.py  diff_calculator.py  diff_constructor.py  formats_helper.py  generate_diff.py  parser.py  parsers.py
gendiff/formatters/: __init__.py  json.py  jsonlike.py  jsontxt.py  plain.py
gendiff/scripts/: gendiff.py
test_data/: content.py
tests/: input_data.py  test_all.py  test_comparison.py  test_data.py  test_format.py  test_gendiff.py  test_generate_diff.py  test_paths.py  test_render.py  tests.py
tests/fixtures/: after_2.json  exp_result_diff  exp_result_diff_deep  exp_result_json_diff  exp_result_json_diff.json  exp_result_plain_diff
tests/test_data/: content.py
