[tool.poetry]
name = "eg-b_gendiff"
version = "0.4.10"
description = "generate difference"
authors = ["eg_b <egbv.py@gmail.com>"]
packages = [
    { include = "gendiff" },
  ]

[[tool.poetry.source]]
name= "testpypi"
url= "https://test.pypi.org/legacy/"

[tool.poetry.dependencies]
python = "^3.6"
pyYAML = "^5.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
